# fintech-ledger-system-assigment-

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: dependencies.py
app/api/v1/: admin.py  brands.py  health.py  sales.py  schemas.py  users.py  withdrawals.py
app/core/: enums.py  exceptions.py  state_machines.py
app/db/: base.py  session.py  unit_of_work.py
app/db/models/: __init__.py  audit_log.py  brand.py  idempotency.py  ledger.py  payout.py  sale.py  user.py  user_balance.py  withdrawal.py
app/db/repositories/: __init__.py  audit_repo.py  balance_repo.py  base.py  brand_repo.py  idempotency_repo.py  ledger_repo.py  payout_repo.py  sale_repo.py  user_repo.py  withdrawal_repo.py
app/infra/background/: __init__.py  jobs.py  scheduler.py
app/infra/payment/: __init__.py  base.py  mock.py
app/services/: __init__.py  balance_service.py  ledger_service.py  payout_service.py  reconciliation_service.py  sale_service.py  withdrawal_service.py
docs/: architecture.md  edge_cases.md
docs/adr/: 001-immutable-ledger-and-cached-balances.md  002-unit-of-work-pattern.md  003-state-machine-validation.md  004-background-polling-over-event-driven.md  005-header-based-auth.md
migrations/: env.py
migrations/versions/: 2752fa262fef_initial_schema.py
tests/: conftest.py  test_api.py  test_edge_cases.py  test_services.py  test_state_machines.py
