[project]
name = "fintech-ledger-system"
version = "0.1.0"
description = "Production-inspired User Payout Management System"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
